[gd_scene format=3 uid="uid://ml3t2ma68xrd"]

[ext_resource type="Material" uid="uid://dayfq0bbn8bdu" path="res://materials/temp_slingshot.tres" id="1_b15t4"]
[ext_resource type="Script" uid="uid://bowypxdbojkr2" path="res://scenes/entity/slingshot.gd" id="1_yta2k"]

[sub_resource type="PlaneMesh" id="PlaneMesh_718mc"]
material = ExtResource("1_b15t4")

[sub_resource type="CylinderMesh" id="CylinderMesh_b15t4"]
material = ExtResource("1_b15t4")
top_radius = 0.3
bottom_radius = 0.15
height = 4.0
radial_segments = 16
rings = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_b15t4"]

[node name="slingshot" type="Node3D" unique_id=419567235]
script = ExtResource("1_yta2k")

[node name="MeshInstance3D" type="MeshInstance3D" parent="." unique_id=769565562]
transform = Transform3D(0.70710677, 0, 0.70710677, 0, 1, 0, -0.70710677, 0, 0.70710677, 0, 0, 0)
mesh = SubResource("PlaneMesh_718mc")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="." unique_id=1492984937]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 2, 0)
mesh = SubResource("CylinderMesh_b15t4")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="." unique_id=451179100]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.3000001, 2, 0)
mesh = SubResource("CylinderMesh_b15t4")

[node name="trigger1" type="Area3D" parent="." unique_id=224011927]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 1.6)

[node name="CollisionShape3D" type="CollisionShape3D" parent="trigger1" unique_id=185741040]
shape = SubResource("BoxShape3D_b15t4")

[node name="trigger2" type="Area3D" parent="." unique_id=257696739]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -1.6)

[node name="CollisionShape3D" type="CollisionShape3D" parent="trigger2" unique_id=569443121]
shape = SubResource("BoxShape3D_b15t4")

[node name="mark1" type="Marker3D" parent="." unique_id=1251147886]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 2, 0)

[node name="mark2" type="Marker3D" parent="." unique_id=635000653]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.3, 2, 0)
